--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall":"prisma generate"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-   "@auth/prisma-adapter": "^2.1.0",
+    "@auth/prisma-adapter": "^2.1.0",
     "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -49,6 +49,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-share-social": "^0.1.60",
+    "react-to-print": "^2.15.1",
     "resend": "^3.2.0",
     "sass": "^1.76.0",
     "sweetalert2": "^11.11.0",
@@ -59,9 +60,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "eslint-config-next": "14.2.13",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
