--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nuka-carousel": "^8.0.1",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
